feat(ui): show status details for pods with status "Pending"

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -1579,7 +1579,7 @@ footer .tooltip p {
     text-transform: uppercase;
 }
 
-#notifications .message {
+.message {
     border-top: 1px solid var(--borderColor);
     position: relative;
     max-width: 320px;
