--- a/doc/themes/sg-doc/layouts/partials/toc.html
+++ b/doc/themes/sg-doc/layouts/partials/toc.html
@@ -1,7 +1,7 @@
 <!-- TOCs need to be declared explicitly in the front matter of content/*.md -->
-<aside>
-    <header>
-        <h2>What's on this Page</h2>
-    </header>
-    {{ .TableOfContents }}
-</aside>
+    <aside class="toc">
+        <header>
+            <h2>On this Page</h2>
+        </header>
+        {{ .TableOfContents }}
+    </aside>
