fix(ui): validate dependencies exist when cloning a cluster

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -138,6 +138,11 @@ h1, h2, h3, h4, h5, h6 {
     cursor: pointer;
 }
 
+.btn[disabled] {
+    filter: grayscale(1);
+    cursor: not-allowed;
+}
+
 .form button:hover, .form button:focus, .btn:hover, .btn:focus, button:hover {
     background: var(--lblue);
     border-color: var(--lblue);
@@ -2433,6 +2438,7 @@ form .warning {
     border-radius: 6px;
     margin-bottom: 20px;
     display: inline-block;
+    line-height: 1.1;
     width: 100%;
 }
 
@@ -2759,6 +2765,10 @@ fieldset {
 
 .form .alert {
     border-color: var(--orange);
+}
+
+.alert a {
+    color: var(--orange);
 }
 
 span.req {
@@ -4792,10 +4802,12 @@ table.backupConfig tr.details.open td:first-of-type {
     color: var(--orange);
 }
 
-.warning.alert li {
-    margin: 10px;
-    left: 10px;
-    position: relative;
+.warning ul {
+    padding-left: 20px;
+}
+
+.warning li {
+    margin: 10px 0;
 }
 
 /*Help Tooltips*/
