wip(ui): minor version upgrade status report

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -341,8 +341,16 @@ svg.background circle {
     display: block;
 }
 
-.fRight {
+.floatRight {
     float: right;
+}
+
+.xsPad {
+    padding: 10px;
+}
+
+.pad {
+    padding: 20px;
 }
 
 /* Log in */
