fix(ui): add table headers to nodeAffinity info to avoid repeated tooltips

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -3417,16 +3417,12 @@ table.clusterConfig {
     margin-bottom: 15px;
 }
 
-table.clusterConfig thead {
-    display: none;
-}
-
-table.clusterConfig th:first-child, table.clusterConfig td:first-child {
-    width: 150px;
-}
-
 table.clusterConfig tr {
     background: transparent;
+}
+
+table.clusterConfig thead th {
+    border: 1px solid var(--borderColor);
 }
 
 table.clusterConfig td {
